Fixed horizontal scrolling in chat again

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -42,46 +42,14 @@
 }
 
 .chat {
-    width: 100%;
-    height: 50vh;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    text-align: center;
     background-color: white;
     border: 2px solid black;
     border-radius: 1em;
-    padding: 0 2vmin;
-    flex-grow: 1;
-}
-
-.chat > h1 {
-    font-size: 2.5em;
-    margin: 1vmin;
-}
-
-@media only screen and (max-width: 1000px) {
-    .chat {
-        height: 450px;
-    }
-    .gameChat {
-        width: 80%;
-        min-height: 400px;
-        height: 62vh;
-        position: absolute;
-        z-index: 100;
-        top: 30%;
-        left: 10%;
-        padding: 4vmin;
-    }
-    .lobbyChat {
-        width: 80%;
-        z-index: 100;
-        padding: 4vmin;
-    }
-}
-
-.shown {
-    display: flex;
+    padding: 1em;
+    text-align: center;
 }
 
 .hidden {
@@ -89,7 +57,6 @@
 }
 
 .messagesContainer {
-    margin: 0.5em;
     flex-grow: 1;
     background-color: white;
     border: 2px solid black;
@@ -97,15 +64,7 @@
     padding: 0.2em;
 }
 
-.chatInput {
-    width: 80%;
-}
-
-.chatButton {
-    margin-top: 0;
-}
-
-.scrollbarPadding {
+.scrollContainer {
     position: relative;
     height: 100%;
 }
@@ -117,26 +76,28 @@
     left: 0;
     right: 0;
     overflow-y: auto;
-    text-align: left;
 }
 
 .message {
-    word-wrap: break-word;
-    margin: 0.5vmin;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0.5em 0;
+    width: 100%;
 }
 
 .messageUsername {
-    padding-right: 1vmin;
+    padding-right: 1em;
 }
 
 .messageText {
-    min-width: 80%;
     border: 2px solid black;
-    padding: 0.5vmin 2vmin;
+    padding: 0.2em;
     background-color: orange;
     border-radius: 1em;
+    word-wrap: break-word;
+    max-width: 100%;
+    text-align: left;
 }
 
 .chatMessageForm {
